Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
There is no accessor for the user property of a connection. Either on the client or server side.
There is a parallel user setter so I tend to think this is an oversight.
It is not such an issue on the client side (as in theory you could just record the user you set), but on the server side the alternative is to use the sasl object attached to the transport, which is awkward and doesn't cover all the possibilities (SSL client certificates).
Attachments
Issue Links
- is related to
-
PROTON-1238 Add fallback operator<< for wrapped proton-c objects
- Closed