PROTON-1239: Add accessor to connection for authenticated user. - Also had to fix pn_transport_get_user() to act correctly on a server   where sasl parameters were set but sasl itself was not required.